@@ -34,6 +34,8 @@ Core and Builtins
 Library
 -------
 
+- Removed the sunaudio module. Use sunau instead.
+
 - Removed "ast" function aliases from the parser module.
 
 - Issue #3313: Fixed a crash when a failed dlopen() call does not set
